--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.1",
     "@google/genai": "^1.31.0",
     "recharts": "^3.5.1",
-    "react": "^19.2.1"
+    "react": "^19.2.1",
+    "pdfjs-dist": "3.11.174"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
